--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,7 +41,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="welcome_to_pickshunter">Welcome to\nPicksHunter</string>
     <string name="plan_your_upcoming_trip_and_start_adding_products_to_your_profile">Plan your upcoming trip and start adding products to your profile</string>
-    <string name="get_ready_for_trip">Get Ready For Youur Trip To</string>
+    <string name="get_ready_for_trip">Get ready for your trip to</string>
     <string name="plan_your_trip">Plan Your Trip</string>
     <string name="trip_details">Trip details</string>
     <string name="go_trip_details">Go To Trip details</string>
